| Bug #12183 | SHOW OPEN TABLES behavior doesn't match grammar | ||
|---|---|---|---|
| Submitted: | 26 Jul 2005 19:18 | Modified: | 17 Aug 2005 18:20 |
| Reporter: | Paul DuBois | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.0 and up | OS: | Any |
| Assigned to: | Andrey Hristov | Target Version: | |
[26 Jul 2005 19:18]
Paul DuBois
[8 Aug 2005 22:59]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/28036
[16 Aug 2005 11:19]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/28328
[17 Aug 2005 18:20]
Paul DuBois
Noted in 5.0.12 changelog and updated SHOW OPEN TABLES section.
[28 Feb 13:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/43137 ChangeSet@1.2549, 2008-02-28 15:12:23+03:00, anozdrin@quad. +2 -0 Fix test case for Bug#12183 to make it stable.
[3 Mar 19:18]
Bugs System
Pushed into 5.1.24-rc
[3 Mar 19:18]
Bugs System
Pushed into 6.0.5-alpha
[29 Mar 20:33]
Jon Stephens
Also documented for 5.1.23-ndb-6.3.11 and 5.1.24.
