fix for bug #12183 "SHOW OPEN TABLES behavior doesn't match grammar" (after review commit)